tests/cases/compiler-development/artifact/errors/diagnostic-duplicate-function.diagnostic
diagnostic error code=T0001 family=type message="duplicate executable function 'pick'" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/functions/errors/function-overload-params.ari" display="tests/cases/functions/errors/function-overload-params.ari" bytes=137
  Label index=0 role=primary source_id=0 source="tests/cases/functions/errors/function-overload-params.ari" line=5 column=4 end_line=5 end_column=8 byte_start=43 byte_end=47 message=""
  Snippet label=0 text="  --> tests/cases/functions/errors/function-overload-params.ari:5:4\n   |\n 5 | fn pick(value: i64, fallback: i64) -> i64 {\n   |    ^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/functions/errors/function-overload-params.ari" line=1 column=4 end_line=1 end_column=8 byte_start=3 byte_end=7 message="previous declaration of function 'pick'"
  Snippet label=1 text="  --> tests/cases/functions/errors/function-overload-params.ari:1:4\n   |\n 1 | fn pick(value: i64) -> i64 {\n   |    ^^^^"
  Note index=0 location=none message="previous declaration is shown as a secondary label"
  Help index=0 location=none message="rename or remove one of the function declarations"
